# aiven-cli-jq-cheat-sheet

./: CODE_OF_CONDUCT.md  LICENSE  README.md  process_json.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: issue_template.yml
avn_jq_cookbook/: app.py
avn_jq_cookbook/data/: service.json  user.json
data/: project.json  user.json
